# engram-benchmark

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIX_VALIDATION.md  Makefile  README.md  RUN_PIPELINE.md  SECURITY.md  openclaw-memory-benchmark-README.md  openclaw-memory-benchmark-v1.json  openclaw-memory-benchmark-v2-README.md  openclaw-memory-benchmark-v2.json  openclaw-memory-benchmark-v3-README.md  openclaw-memory-benchmark-v3-test.json  pyproject.toml
.github/: pull_request_template.md
benchmark/: __init__.py  compare.py  config.py  judge.py  run.py
data/: README.md
docs/: FINDINGS.md  architecture.md  benchmark_release_v3.md  benchmark_roadmap.md  benchmark_spec.md  cortex-benchmark-results.md  cortex-recall-channel-fixes.md  cortex_benchmark_narrative.md  cortex_product_findings.md  dataset_card.md  ethics_and_limitations.md  evaluation_protocol.md  external_validity.md  findings_codex_test_split.md  governance.md  integration_guide.md  judge_validation.md  leaderboard.md  paper-readiness.md  related_work.md  repeated_runs.md  repeated_runs_test.md  reproducibility.md  system_matrix.md
leaderboard/: README.md  submission_format.md
prompts/: system_prompt.txt  task_prompt.txt
scripts/: README.md  anonymize_dataset.py  build_kwanda_dataset.py  ci_validate_hf_dataset.py  config.py  create_test_subset.py  entity_registry.py  generate_v3.py  llm_client.py  question_generator.py  run_dev.sh  run_test.sh  run_v2_dev.sh  run_v2_test.sh  session_generator.py  transform_test_dataset.py  validate_submission.py  (+1 more)
(+976 files in other folders)
